@@ -4,8 +4,11 @@ import static java.net.HttpURLConnection.HTTP_OK;
 
 import ca.letkeman.resumes.responses.LLMResponse;
 import com.google.gson.Gson;
+import java.awt.Choice;
 import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.File;
+import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
@@ -13,8 +16,8 @@ import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
 import java.net.HttpURLConnection;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -23,6 +26,7 @@ import org.slf4j.LoggerFactory;
 public class ApiService {
 
   private static final Logger logger = LoggerFactory.getLogger(ApiService.class);
+  private static final String OUTPUT_DIR = "output";
 
 
   public enum PROMPT_TYPE {
@@ -65,7 +69,7 @@ public class ApiService {
   private static String readFileAsString(String fileName) {
     String data = "";
     try {
-      data = new String(Files.readAllBytes(Paths.get(fileName)));
+      data = Files.readString(Paths.get(fileName), StandardCharsets.ISO_8859_1);
     } catch (IOException e) {
       logger.error("Error reading file: {}\n{}", fileName, e.toString());
     }
@@ -76,40 +80,38 @@ public class ApiService {
     this.serverURL = "http://localhost:1234/v1/chat/completions";
   }
 
-  public CompletableFuture<LLMResponse> invokeApi(ChatBody chatBody) {
+  public LLMResponse invokeApi(ChatBody chatBody) {
     String jsonBody = new Gson().toJson(chatBody);
-    return CompletableFuture.supplyAsync(() -> {
-      try {
-        URI uri = new URI(getServerURL());
-        HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
-        conn.setRequestMethod("POST");
-        conn.setRequestProperty("Content-Type", "application/json");
-        conn.setRequestProperty("Accept", "application/json");
-        conn.setDoOutput(true);
+    try {
+      URI uri = new URI(getServerURL());
+      HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
+      conn.setRequestMethod("POST");
+      conn.setRequestProperty("Content-Type", "application/json");
+      conn.setRequestProperty("Accept", "application/json");
+      conn.setDoOutput(true);
 
-        attachJSONBody(jsonBody, conn);
-        StringBuilder response = new StringBuilder();
-        try (BufferedReader br = new BufferedReader(
-            new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
+      attachJSONBody(jsonBody, conn);
+      StringBuilder response = new StringBuilder();
+      try (BufferedReader br = new BufferedReader(
+          new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
 
-          String responseLine = null;
-          while ((responseLine = br.readLine()) != null) {
-            response.append(responseLine.trim());
-          }
-          logger.info("API Response:\n{}", response);
+        String responseLine = null;
+        while ((responseLine = br.readLine()) != null) {
+          response.append(responseLine.trim());
         }
-        if (conn.getResponseCode() != HTTP_OK) {
-          logger.error(String.valueOf(conn.getErrorStream()));
-        } else {
-          return new Gson().fromJson(response.toString(), LLMResponse.class);
-        }
-      } catch (Exception e) {
-        logger.error(e.toString());
       }
-      return null;
-    });
+      if (conn.getResponseCode() != HTTP_OK) {
+        logger.error(String.valueOf(conn.getErrorStream()));
+      } else {
+        return new Gson().fromJson(response.toString(), LLMResponse.class);
+      }
+    } catch (Exception e) {
+      logger.error(e.toString());
+    }
+    return null;
   }
-  private static void attachJSONBody(String jsonBody, HttpURLConnection conn) {
+
+  private void attachJSONBody(String jsonBody, HttpURLConnection conn) {
     byte[] input = jsonBody.getBytes(StandardCharsets.UTF_8);
     try (OutputStream os = conn.getOutputStream()) {
       encodeBody(os, input);
@@ -118,7 +120,7 @@ public class ApiService {
     }
   }
 
-  private static void encodeBody(OutputStream os, byte[] input) {
+  private void encodeBody(OutputStream os, byte[] input) {
     try {
       os.write(input, 0, input.length);
     } catch (IOException e) {
@@ -126,17 +128,17 @@ public class ApiService {
     }
   }
 
-  public static void main(String[] args) throws Exception {
+  public LLMResponse getLLMResponse(String promptType, String resume, String jobDescription, String jobTitle, String company) {
+    return getLLMResponse(promptType, 0.7, "gemma-3-4b-it", resume, jobDescription, jobTitle, company);
+  }
 
-    String promptData = readFileAsString("prompts" + File.separator + PROMPT_TYPE.RESUME.name() + ".md");
-
-    String resume = readFileAsString("sample" + File.separator + "resume.md");
-    String jobDescription = readFileAsString("sample" + File.separator + "PointClickCare-Software Engineer.txt");
+  public LLMResponse getLLMResponse(String promptType, double temperature, String model, String resume, String jobDescription, String jobTitle, String company) {
+    String promptData = readFileAsString("prompts" + File.separator + promptType + ".md");
     promptData = promptData.replace("{resume_string}", resume).replace("{jd_string}", jobDescription);
 
     ChatBody chatBody = new ChatBody();
-    chatBody.setTemperature(0.7);
-    chatBody.setModel("gemma-3-4b-it");
+    chatBody.setTemperature(temperature);
+    chatBody.setModel(model);
     chatBody.setMaxTokens(-1);
     chatBody.setStream(false);
 
@@ -149,13 +151,91 @@ public class ApiService {
 
     chatBody.setMessages(List.of(systemMessage, userMessage));
 
-    ApiService service = new ApiService();
-    CompletableFuture<LLMResponse> apiFuture = service.invokeApi(chatBody);
+    LLMResponse llmResponse = new ApiService().invokeApi(chatBody);
 
-    LLMResponse x = new LLMResponse();
-    x = apiFuture.get(); // this is a blocking operation
+    String body = "";
+    String suggestion = "";
 
-    System.out.println(x.getChoices());
+    if (llmResponse != null) {
+      ArrayList<ca.letkeman.resumes.responses.Choice> choices = (ArrayList<ca.letkeman.resumes.responses.Choice>) llmResponse.getChoices();
+      if (choices != null && !choices.isEmpty() && choices.get(0).getMessage() != null && choices.get(0).getMessage().getContent() != null){
+        String message = choices.get(0).getMessage().getContent();
+        int chopStart = message.indexOf("```");
+        if (chopStart > -1){
+          message = message.substring(chopStart);
+          chopStart = message.indexOf("\n");
+          message = message.substring(chopStart);
+          String[] content = message.split("Additional Suggestions");
+          if (content != null) { // Check length for exactly two elements
+            body = content[0].trim();
+            suggestion = content.length == 2 ? content[1].trim() : "";
+
+            body = trimString(body);
+
+            suggestion = removeTrailingChar(suggestion,"#");
+
+            if (body.trim().isEmpty()) {
+              body = "";
+            }
+          }
+        }
+      }
+    }
+
+    try {
+      Files.createDirectories(Paths.get(OUTPUT_DIR));
+    } catch (Exception e) {
+      logger.error("Unable to create output directory.\n{}", e.toString());
+    }
+
+    String fileName = company + "-" + jobTitle + ".md";
+    try (BufferedWriter writer = new BufferedWriter(new FileWriter(OUTPUT_DIR + File.separator + fileName, false))) {
+      writer.write(body);
+      writer.flush();  // Data is written to OS page cache, not necessarily to the disk immediately
+    } catch (Exception e) {
+      logger.error("Error writing file: {}\n{}:", fileName, e.toString());
+    }
+    fileName = company + "-" + jobTitle + "-suggestions.md";
+    if (suggestion != null && !suggestion.isBlank()) {
+      try (BufferedWriter writer = new BufferedWriter(new FileWriter(OUTPUT_DIR + File.separator + fileName, false))) {
+        writer.write(suggestion);
+        writer.flush();  // Data is written to OS page cache, not necessarily to the disk immediately
+      } catch (Exception e) {
+        logger.error("Error writing file: {}\n{}:", fileName, e.toString());
+      }
+    }
+
+    return  llmResponse;
+  }
+
+  private String trimString(String body) {
+    if (body != null) {
+      while ((body.endsWith("#")) || (body.endsWith("`")) || (body.endsWith("-"))) {
+        body = removeTrailingChar(body, "#");
+        body = removeTrailingChar(body, "`");
+        body = removeTrailingChar(body, "-");
+      }
+    }
+    return body;
+  }
+
+  private String removeTrailingChar(String str, String badChar) {
+    if (str == null) return str; //Handle null input gracefully
+    while (str != null && str.endsWith(badChar)) {
+      str = str.substring(0, str.length() - 1);
+    }
+    return str == null ? "" : str.trim();
+  }
+
+  public static void main(String[] args) {
+
+    String resume = readFileAsString("sample" + File.separator + "resume.md");
+    String jobDescription = readFileAsString("sample" + File.separator + "PointClickCare-Software Engineer.txt");
+
+    ApiService apiService = new ApiService();
+    LLMResponse x = apiService.getLLMResponse(PROMPT_TYPE.RESUME.name(), resume, jobDescription, "developer", "point click care");
+
+//    System.out.println(x.getChoices());
     System.out.println("pete");
   }
 }
